[gd_scene load_steps=4 format=3 uid="uid://dwiu4cm7rlq0p"]

[ext_resource type="Script" path="res://src/HUD/HUD.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://d1y6g0qxtsnpw" path="res://assets/sprites/clock.png" id="3_gm3l4"]

[sub_resource type="LabelSettings" id="LabelSettings_ni124"]
font_size = 100

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Timer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_bottom = 64.0
grow_horizontal = 0
size_flags_vertical = 4

[node name="TimerValue" type="Label" parent="Timer"]
layout_mode = 2
text = "Timer val"

[node name="ChronoTexture" type="TextureRect" parent="Timer"]
layout_mode = 2
texture = ExtResource("3_gm3l4")

[node name="TimeIsUp" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Time is up!"
label_settings = SubResource("LabelSettings_ni124")

[node name="FadeOutPane" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
